--- a/assets/views/artworkMulti.jet.html
+++ b/assets/views/artworkMulti.jet.html
@@ -2,7 +2,7 @@
 {{- block body() }}
 {{- range .Artworks }}
 <div class="container illust">
-{{- include "components/artwork" . }}
+{{- include "fragments/artwork" . }}
 </div>
 {{- end }}
 {{- end }}
