--- a/assets/views/discovery.jet.html
+++ b/assets/views/discovery.jet.html
@@ -14,7 +14,7 @@
     <a href='{{replaceQuery(.Queries, "mode", "r18")}}' class="switch-button">R-18</a>
   </div>
   <div class="artwork-container">
-    {{- include "components/small-tn" .Artworks }}
+    {{- include "fragments/small-tn" .Artworks }}
   </div>
   <div class="pagination">
     <a href="" class="pagination-button">Reload</a>
