--- a/assets/views/following.jet.html
+++ b/assets/views/following.jet.html
@@ -8,7 +8,7 @@
     <a href="/following_works?mode=safe&page=1" class="switch-button">Safe</a>
     <a href="/following_works?mode=r18&page=1" class="switch-button">R-18</a>
   </div>
-  <div class="artwork-container">{{ include "components/small-tn" .Artworks }}</div>
+  <div class="artwork-container">{{ include "fragments/small-tn" .Artworks }}</div>
   <div class="pagination">
     {{- url := "/self/following_works" + "?mode=" + .Mode + "&page=" }}
     <small>Page {{ .CurPage }}</small>
