--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -63,7 +63,7 @@
       <div class="artwork-actions"><a href="{{combinedUrl}}">View all art on this page</a></div>
     </div>
     <div class="artwork-container">
-      {{- include "components/small-tn" .User.Artworks }}
+      {{- include "fragments/small-tn" .User.Artworks }}
     </div>
     {{- else }}
 
@@ -72,7 +72,7 @@
     </div>
     <div class="novel-container">
       {{- range .User.Novels }}
-      {{- include "components/novel-tn" . }}
+      {{- include "fragments/novel-tn" . }}
       {{- end }}
     </div>
     {{- end }}
