clean up ranking image thumbnail (template)

--- a/assets/views/fragments/thumbnail-dt.jet.html
+++ b/assets/views/fragments/thumbnail-dt.jet.html
@@ -2,11 +2,15 @@
 {{- hideR18 := CookieList["pixivfe-HideArtR18"] }}
 <div class="artwork-image">
   <div class="artwork-additional">
+    {{- if isset(.Rank) }}
+    <div class="artwork-position">{{ .Rank }}</div>
+    {{- end }}
     {{- if .XRestrict != 0 }}
     <div class="artwork-profanity-label">
       <span>{{ if .XRestrict == 1 }}R-18{{ else }}R-18G{{ end }}</span>
     </div>
-    {{- end }} {{ if .Pages > 1 }}
+    {{- end }}
+    {{- if .Pages > 1 }}
     <div class="artwork-page-count"><span>&boxbox; {{ .Pages }}</span></div>
     {{- end }}
     {{- if .IllustType == 2 }}
@@ -20,4 +24,7 @@
     <img src="{{ .Thumbnail }}" alt="{{ .Title }}" loading="lazy" />
     {{- end }}
   </a>
+</div>
+<div class="artwork-title">
+  <a target="{{ target }}" href="/artworks/{{ .ID }}#checkpoint"> {{ .Title }} </a>
 </div>
