--- a/assets/views/fragments/thumbnail-at.jet.html
+++ b/assets/views/fragments/thumbnail-at.jet.html
@@ -1,6 +1,6 @@
 <div class="artwork-author">
-  <a href="/users/{{ .ArtistID }}"
-    ><img src="{{ .ArtistAvatar }}" alt="{{ .ArtistName }}" />
-    <span>{{ .ArtistName }}</span></a
-  >
+  <a href="/users/{{ .ArtistID }}">
+    <img src="{{ .ArtistAvatar }}" alt="{{ .ArtistName }}" />
+    <span>{{ .ArtistName }}</span>
+  </a>
 </div>
