Option to filter R18/R18G artworks #38

--- a/assets/views/fragments/ranking-tn.jet.html
+++ b/assets/views/fragments/ranking-tn.jet.html
@@ -2,6 +2,7 @@
 {{- target := CookieList["pixivfe-ThumbnailToNewTab"] }}
 <div class="artwork-small artwork">
   {{- include "thumbnail-dt" }}
+  {{- include "thumbnail-tt" }}
   {{- include "thumbnail-at" }}
 </div>
 {{- end }}
