--- a/assets/views/fragments/small-tn.jet.html
+++ b/assets/views/fragments/small-tn.jet.html
@@ -1,11 +1,11 @@
 {{- range . }} {{ if .ID == "#" }}
 <div class="artwork-small artwork">
-  <img src="/img/404.png" alt="{{ .Title }}" loading="lazy" />
+  <img src="/img/deleted.png" alt="{{ .Title }}" loading="lazy" />
   <div class="artwork-title">
     <a>{{ .Title }}</a>
   </div>
   <div class="artwork-author">
-    <a><img src="/img/404.png" alt="{{ .ArtistName }}" loading="lazy" />
+    <a><img src="/img/deleted.png" alt="{{ .ArtistName }}" loading="lazy" />
       <span>{{ .ArtistName }}</span></a>
   </div>
 </div>
