--- a/assets/views/fragments/thumbnail-dt.jet.html
+++ b/assets/views/fragments/thumbnail-dt.jet.html
@@ -1,5 +1,6 @@
 {{- target := CookieList["pixivfe-ThumbnailToNewTab"] }}
 {{- hideR18 := CookieList["pixivfe-HideArtR18"] }}
+{{- hideR18G := CookieList["pixivfe-HideArtR18G"] }}
 <div class="artwork-image">
   <div class="artwork-additional">
     {{- if isset(.Rank) }}
@@ -18,13 +19,10 @@
     {{- end }}
   </div>
   <a target="{{ target }}" href="/artworks/{{ .ID }}#checkpoint">
-    {{- if .XRestrict != 0 && hideR18 != "" }}
-    <img src="/img/404.png" alt="{{ .Title }}" loading="lazy" />
+    {{- if (.XRestrict > 0 && hideR18 != "" && hideR18G != "") || (.XRestrict == 2 && hideR18G != "") }}
+    <img src="/img/nsfw.png" alt="{{ .Title }}" loading="lazy" />
     {{- else }}
     <img src="{{ .Thumbnail }}" alt="{{ .Title }}" loading="lazy" />
     {{- end }}
   </a>
-</div>
-<div class="artwork-title">
-  <a target="{{ target }}" href="/artworks/{{ .ID }}#checkpoint"> {{ .Title }} </a>
 </div>
