--- a/assets/views/fragments/thumbnail-dt.jet.html
+++ b/assets/views/fragments/thumbnail-dt.jet.html
@@ -1,6 +1,7 @@
 {{- target := CookieList["pixivfe-ThumbnailToNewTab"] }}
 {{- hideR18 := CookieList["pixivfe-HideArtR18"] }}
 {{- hideR18G := CookieList["pixivfe-HideArtR18G"] }}
+{{- hideAi := CookieList["pixivfe-HideArtAI"] }}
 <div class="artwork-image">
   <div class="artwork-additional">
     {{- if isset(.Rank) }}
@@ -21,6 +22,8 @@
   <a target="{{ target }}" href="/artworks/{{ .ID }}#checkpoint">
     {{- if (.XRestrict > 0 && hideR18 != "" && hideR18G != "") || (.XRestrict == 2 && hideR18G != "") }}
     <img src="/img/nsfw.png" alt="{{ .Title }}" loading="lazy" />
+    {{- else if .AiType == 2 && hideAi }}
+    <img src="/img/ai.png" alt="{{ .Title }}" loading="lazy" />
     {{- else }}
     <img src="{{ .Thumbnail }}" alt="{{ .Title }}" loading="lazy" />
     {{- end }}
