Remove extra leading periods

--- a/assets/views/discovery.jet.html
+++ b/assets/views/discovery.jet.html
@@ -4,8 +4,8 @@
   <h1>Discover artworks</h1>
   <div class="switcher">
     <div class="switch-title">Type</div>
-    <a href="/discovery" class="switch-button">.Artworks</a>
-    <a href="/discovery/novel" class="switch-button">.Novels</a>
+    <a href="/discovery" class="switch-button">Artworks</a>
+    <a href="/discovery/novel" class="switch-button">Novels</a>
   </div>
   <div class="switcher">
     <div class="switch-title">Filter</div>
