Improve version and revision info handling
Modify the REVISION variable to include both commit date and hash.
Update config package to parse and store revision components separately.
Modify about page and routes to display more detailed revision information.

--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -13,7 +13,7 @@
     {{- if .Revision != "" }}
     <li>
       <b>Revision:</b>
-      <a href="https://codeberg.org/VnPower/PixivFE/commit/{{ .Revision }}">{{ .Revision }}</a><br />
+      <a href="https://codeberg.org/VnPower/PixivFE/commit/{{ .RevisionHash }}">{{ .Revision }}</a><br />
       PixivFE's source code revision
     </li>
     {{- end }}
