Support special marks for novel
1. `rb` mark for furigana
2. `jumpuri` mark to open link externally
3. `chapter` mark
4. `jump` to jump to page num anchor
5. Refactor `newpage` mark

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -989,6 +989,10 @@ edit style.scss
     max-height: 100%;
     margin: 0 0.5rem;
   }
+  .novel .novel-content .novel-content-text a {
+    text-decoration: underline;
+    color: black;
+  }
   .novel .novel-attr {
     display: flex;
     align-items: center;
