Pixivision: Tag page

--- a/assets/views/pixivisionCategory.jet.html
+++ b/assets/views/pixivisionCategory.jet.html
@@ -16,7 +16,7 @@
 				<div class="vision-metadata-other">
 					<div class="tag-list">
 						{{- range _, tag := article.Tags }}
-						<a href="/pixivision/tag/{{tag.ID}}">#{{tag.Name}}</a>
+						<a href="/pixivision/t/{{tag.ID}}">#{{tag.Name}}</a>
 						{{- end }}
 					</div>
 					<div>
