--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -921,6 +921,19 @@ edit style.scss
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
   }
+  .novel-card .novel-detail .novel-metadata .novel-series-title {
+    color: #aaa;
+    font-size: 1em;
+    font-weight: bold;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    text-overflow: ellipsis;
+    width: 100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
   .novel-card .novel-detail .novel-metadata .novel-description {
     font-size: 0.85em;
     overflow: hidden;
@@ -961,8 +974,26 @@ edit style.scss
     font-size: 1.17em;
     font-weight: bold;
   }
+  .novel .novel-detail .novel-metadata .novel-series-title {
+    color: #aaa;
+    font-size: 1em;
+    font-weight: bold;
+  }
   .novel .novel-detail .novel-metadata .novel-description {
     font-size: 0.85em;
+  }
+  .novel .content-title-list {
+    list-style: none;
+    font-size: 0.9em;
+    font-weight: bold;
+    padding: 0px;
+    overflow-y: auto;
+    max-height: 10.5em;
+    margin-top: 0;
+    color: #aaa;
+  }
+  .novel .content-title-list .current {
+    background: rgba(0, 0, 0, 0.04);
   }
   .novel .novel-cover img {
     /* warning: hard-coded values */
@@ -1052,9 +1083,33 @@ edit style.scss
   .novel .novel-settings .dropdown-toggler:checked ~ .dropdown-content {
     display: block;
   }
+  .novel .novel-series-nav {
+    text-align: center;
+    padding: 20px;
+  }
+  .novel .novel-series-nav .novel-series-title {
+    color: #aaa;
+    font-size: 1em;
+    font-weight: bold;
+  }
+  .novel .novel-series-nav .prev, .novel .novel-series-nav .next {
+    margin-top: 10px;
+  }
+  .novel .novel-series-nav .novel-title {
+    color: #fff;
+    font-weight: bold;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    text-overflow: ellipsis;
+    width: 100%;
+  }
   @media screen and (max-width: 950px) {
     .novel .novel-content .novel-content-text {
       padding: 6.4rem 1rem;
+    }
+    .novel .content-title-nav {
+      display: none;
     }
   }
   .background-cover {
