--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -2,33 +2,32 @@
 {{- block body() }}
 <div class="container">
   <h1>About PixivFE</h1>
-  <p>PixivFE is a Pixiv frontend. It lets you enjoy art on Pixiv without needless interruption.</p>
-  <p>The instance you are looking at is provided by the owner of this domain. If you want to host PixivFE yourself, check out <a href="{{ .RepoURL }}">the source repository</a>.</p>
-  <h2>Server information</h2>
+  <p>PixivFE is an open-source alternative frontend for Pixiv, allowing you to enjoy artwork without unnecessary distractions.</p>
+  <p>This instance is hosted by the owner of {{ .DomainName }}. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}">the source repository</a> for more information.</p>
+  <h2>Server Information</h2>
   <ul>
     <li>
-      <b>Version:</b> {{ .Version }}<br />PixivFE's version this server is
-      running
+      <b>Version:</b> {{ .Version }}<br />
+      The current version of PixivFE running on this server
     </li>
     {{- if .Revision != "" }}
     <li>
       <b>Revision:</b>
       <a href="{{ .RepoURL }}/commit/{{ .RevisionHash }}">{{ .Revision }}</a><br />
-      PixivFE's source code revision
+      The specific revision of PixivFE source code in use
     </li>
     {{- end }}
     <li>
-      <b>Started PixivFE (UTC)</b>: {{ .Time }} <br />The date when PixivFE
-      started on this server
+      <b>Server start time (UTC):</b> {{ .Time }} <br />
+      The date and time when PixivFE was last started on this server
     </li>
     <li>
-      <b>Default image proxy server</b>: {{ .ImageProxy }}<br />The default image
-      proxy server that was set on this server, used to proxy images from
-      i.pximg.net
+      <b>Default image proxy server:</b> {{ .ImageProxy }}<br />
+      The image proxy server used to retrieve images from i.pximg.net
     </li>
     <li>
-      <b>Accept-Language header</b>: {{ .AcceptLanguage }}<br />The value of the
-      Accept-Language header this server uses to request to Pixiv's APIs.
+      <b>Accept-Language header:</b> {{ .AcceptLanguage }}<br />
+      The preferred natural language and locale when making requests to the Pixiv API
     </li>
   </ul>
 </div>
