--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -1,34 +1,48 @@
 {{- extends "layout/default" }}
 {{- block body() }}
 <div class="container">
-  <h1>About PixivFE</h1>
-  <p>PixivFE is an open-source alternative frontend for Pixiv, allowing you to enjoy artwork without unnecessary distractions.</p>
-  <p>This instance is hosted by the owner of {{ .DomainName }}. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}">the source repository</a> for more information.</p>
-  <h2>Server Information</h2>
-  <ul>
-    <li>
-      <b>Version:</b> {{ .Version }}<br />
-      The current version of PixivFE running on this server
-    </li>
-    {{- if .Revision != "" }}
-    <li>
-      <b>Revision:</b>
-      <a href="{{ .RepoURL }}/commit/{{ .RevisionHash }}">{{ .Revision }}</a><br />
-      The specific revision of PixivFE source code in use
-    </li>
-    {{- end }}
-    <li>
-      <b>Server start time (UTC):</b> {{ .Time }} <br />
-      The date and time when PixivFE was last started on this server
-    </li>
-    <li>
-      <b>Default image proxy server:</b> {{ .ImageProxy }}<br />
-      The image proxy server used to retrieve images from i.pximg.net
-    </li>
-    <li>
-      <b>Accept-Language header:</b> {{ .AcceptLanguage }}<br />
-      The preferred natural language and locale when making requests to the Pixiv API
-    </li>
-  </ul>
+<h1>About PixivFE</h1>
+
+<div class="card">
+<div class="card-body">
+    <p class="card-text">PixivFE is an open-source alternative frontend for Pixiv, allowing you to enjoy artwork without unnecessary distractions.</p>
+    <p class="card-text">This instance is hosted by the owner of <strong>{{ .DomainName }}</strong>. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}" class="link-primary">the source repository</a> for more information.</p>
+</div>
+</div>
+
+<h2 class="mt-4">Server Information</h2>
+<div class="list-group">
+<div class="list-group-item">
+    <h5>Version</h5>
+    <p>{{ .Version }}</p>
+    <small class="text-muted">The current version of PixivFE running on this server</small>
+</div>
+
+{{- if .Revision != "" }}
+<div class="list-group-item">
+    <h5>Revision</h5>
+    <p><a href="{{ .RepoURL }}/commit/{{ .RevisionHash }}" class="link-primary">{{ .Revision }}</a></p>
+    <small class="text-muted">The specific revision of PixivFE source code in use</small>
+</div>
+{{- end }}
+
+<div class="list-group-item">
+    <h5>Server start time (UTC)</h5>
+    <p>{{ .Time }}</p>
+    <small class="text-muted">The date and time when PixivFE was last started on this server</small>
+</div>
+
+<div class="list-group-item">
+    <h5>Default image proxy server</h5>
+    <p>{{ .ImageProxy }}</p>
+    <small class="text-muted">The image proxy server used to retrieve images from i.pximg.net</small>
+</div>
+
+<div class="list-group-item">
+    <h5>Accept-Language header</h5>
+    <p>{{ .AcceptLanguage }}</p>
+    <small class="text-muted">The preferred natural language and locale when making requests to the Pixiv API</small>
+</div>
+</div>
 </div>
 {{- end }}
