Improve styling on Settings page

--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -1,7 +1,7 @@
 {{- extends "layout/default" }}
 {{- block body() }}
 <div class="container">
-<h1>About PixivFE</h1>
+<h1 class="mt-4">About PixivFE</h1>
 
 <div class="card">
 <div class="card-body">
