--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -1,77 +1,75 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-<div class="container illust" id="checkpoint">
-  {{- include "fragments/artwork" .Illust }}
-  {{- if .Illust.SeriesNavData }}
-  <div class="illust-series-nav">
-    <div>
-      Series: <a class="illust-series-title" href="/user/{{ .Illust.UserID }}/series/{{ .Illust.SeriesNavData.SeriesID }}">
-        {{- .Illust.SeriesNavData.Title }}
-      </a>
+<div class="container" id="checkpoint">
+  <div class="card mb-4">
+    <div class="card-body">
+      {{- include "fragments/artwork" .Illust }}
     </div>
-    {{- if .Illust.SeriesNavData.Next }}
-    <div class="prev">
-      Next:<a class="illust-title" href="/artworks/{{.Illust.SeriesNavData.Next.ID}}">
-        #{{- .Illust.SeriesNavData.Next.Order }}&nbsp;{{ .Illust.SeriesNavData.Next.Title }}</a>
-    </div>
-    {{- end}}
-    {{- if .Illust.SeriesNavData.Prev }}
-    <div class="next">
-      Prev:<a class="illust-title" href="/artworks/{{.Illust.SeriesNavData.Prev.ID}}">
-        #{{- .Illust.SeriesNavData.Prev.Order }}&nbsp;{{ .Illust.SeriesNavData.Prev.Title }}</a>
-    </div>
-    {{- end}}
   </div>
-  {{- end}}
-  <div class="illust-other-works">
-    <div class="artwork-container-header">
-      <a class="illust-other-works-author" href="/users/{{ .Illust.User.ID }}"><img src="{{ .Illust.User.Avatar }}"
-          alt="{{ .Illust.User.Name }}" /> Other works by {{ .Illust.User.Name }}
-        <span class="special-symbol">&raquo;</span>
+
+  <div class="card mb-4">
+    <div class="card-header d-flex justify-content-between align-items-center">
+      <a class="text-decoration-none" href="/users/{{ .Illust.User.ID }}">
+        <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle me-2" style="width: 30px; height: 30px;">
+        Other works by {{ .Illust.User.Name }}
       </a>
       {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.Illust.RecentWorks) }}
-      <div class="artwork-actions"><a href="{{combinedUrl}}">View all</a></div>
+      <a href="{{combinedUrl}}" class="btn btn-sm btn-outline-primary">View all</a>
     </div>
-    <div class="artwork-container-scroll">
-      {{- range .Illust.RecentWorks }}
-      <div class="artwork-small artwork">
-        {{- include "fragments/thumbnail-dt" . }}
+    <div class="card-body">
+      <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-2">
+        {{- range .Illust.RecentWorks }}
+        <div class="col">
+          <div class="artwork-small artwork">
+            {{- include "fragments/thumbnail-dt" . }}
+          </div>
+        </div>
+        {{- end }}
       </div>
-      {{- end }}
     </div>
   </div>
-  <hr />
-  <details>
-    <summary>Comments</summary>
-    {{- if .Illust.CommentDisabled == 1 }}
-    <p>The creator turned comments off</p>
-    {{- else if .Illust.Comments == 0 }}
-    <p>There are no comments yet</p>
-    {{- else }} {{ range .Illust.CommentsList }}
-    <div class="comment">
-      <a href="/users/{{ .AuthorID }}" class="comment-author">
-        <img class="comment-avatar" src="{{ .Avatar }}" alt="{{ .AuthorName }}" />
-      </a>
-      <div class="comment-context">
-        <a href="/users/{{ .AuthorID }}" class="comment-author">
-          {{- .AuthorName }}
-        </a>
-        <p>
-          {{- if .Stamp }}
-          <img class="stamp" src="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg"
-            alt="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg" />
-          {{- else }} {{ raw: parseEmojis(.Context) }} {{ end }}
-        </p>
 
-        <small>{{ .Date }}</small>
+  <div class="accordion mb-4" id="commentsAccordion">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#commentsCollapse">
+          Comments
+        </button>
+      </h2>
+      <div id="commentsCollapse" class="accordion-collapse collapse" data-bs-parent="#commentsAccordion">
+        <div class="accordion-body">
+          {{- if .Illust.CommentDisabled == 1 }}
+          <p class="text-muted">The creator turned comments off</p>
+          {{- else if .Illust.Comments == 0 }}
+          <p class="text-muted">There are no comments yet</p>
+          {{- else }}
+            {{- range .Illust.CommentsList }}
+            <div class="d-flex mb-3">
+              <a href="/users/{{ .AuthorID }}" class="me-3">
+                <img class="rounded-circle" src="{{ .Avatar }}" alt="{{ .AuthorName }}" style="width: 40px; height: 40px;">
+              </a>
+              <div>
+                <a href="/users/{{ .AuthorID }}" class="text-decoration-none fw-bold">{{ .AuthorName }}</a>
+                <p class="mb-1">
+                  {{- if .Stamp }}
+                  <img class="img-fluid" src="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg"
+                    alt="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg" style="max-width: 100px;">
+                  {{- else }}
+                    {{ raw: parseEmojis(.Context) }}
+                  {{- end }}
+                </p>
+                <small class="text-muted">{{ .Date }}</small>
+              </div>
+            </div>
+            {{- end }}
+          {{- end }}
+        </div>
       </div>
     </div>
-    {{- end }} {{ end }}
-  </details>
-</div>
-<div class="container">
-  <h2>Related works</h2>
-  <div class="artwork-container">
+  </div>
+
+  <h2 class="mb-3">Related works</h2>
+  <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-2">
     {{- include "fragments/small-tn" .Illust.RelatedWorks }}
   </div>
 </div>
